# Drug-Recommend

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
2048-16-32-epoch-2/: config.yaml
resource/sub_readme/: experimental_process_record.md
scripts/eval/: eval_dev_dataset.sh  submit_test_result.sh
scripts/train/: baseline_train.sh  baseline_train_deepspeed.sh  baseline_train_deepspeed_xtuner.sh  q2_train.sh  q3_train.sh  xtuner_config.py
src/: eval.py  main.py  retrievaler.py
src/builder_kg/: build.py
src/configs/: train_config.py  xtuner_train_config.yaml  zero3.json
src/data/: pre_drug_mapping.json
src/data/CDrugRed-A-v1/: CDrugRed_val_split_train_18present.jsonl  ranker_json.py  split_train_val.py
src/evaluation/: evaler.py
src/models/baseline/: README.md  baseline_main.py  eval.py  utils.py  zero3.json  zero3_merge.py
src/models/bases/: base_llm_client.py
src/models/llm/: hf_tokenizer.py  limitter.py  openai_client.py  tiktoken_tokenizer.py  tokenizer.py
src/templates/: drug_prompt.py
src/tool/: bert_tokenizer.py  bert_utils.py  tiktoken_tokenizer.py  tokenizer.py
src/trainer/: baseline_trainer.py  bert_baseline_trainer.py  drug_trainer.py  q2_trainer.py  q3_trainer.py  trainer_util.py
src/utils/: few_shot.py  few_shot_gather.py  few_shot_post_process.py  google_search.py  helper.py  log.py  val_computer.py
src/utils/templates/: llm_prompt_baseline.py  rl_prompts.py  sft_prompt.py
src/worker/baseline/: README.md  baseline_main.py  config.py  eval_lora.py  (+4 more)
tests/: find_not_appear_drug.py  global_test.py  output.json
(+25 files in other folders)
